Bug fixed elements on portfolio page overlapping with footer

--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -46,13 +46,15 @@ a #footer-nav h1 {
     margin: 0.2vh;
     z-index: 1 !important;
     min-width: 0;
+    min-height: 0;
+    height: calc(50.5% - 0.4vh - 1em);
 }
 
 /* Individual Bordered Containers */
 #my-story {
     background-color: azure;
     flex: 0.325;
-    height: 98.6%;
+    height: calc(100% - 0.2vh - 0.4em);
     border: 0.2em solid darkblue;
     border-radius: 7px;
     margin: 0.2vh;
@@ -87,7 +89,7 @@ div#portrait-photo img {
 
 #collage {
     flex: 0.325;
-    height: 98.6%;
+    height: calc(100% - 0.2vh - 0.4em);
     border: 0.2em solid darkblue;
     border-radius: 7px;
     margin: 0.2vh;
@@ -104,7 +106,7 @@ div#portrait-photo img {
 
 #about-me {
     flex: 0.55;
-    height: 39.4vh;
+    height: 100%;
     padding: 0.1em 0.2em;
     border: 0.2em solid darkblue;
     border-radius: 7px;
@@ -122,7 +124,7 @@ div#portrait-photo img {
 /* Navigation Menu */
 #navbar {
     flex: 0.45;
-    height: 39.4vh;
+    height: 100%;
     border: 0.2em solid darkblue;
     border-radius: 7px;
     margin: 0.2vh;
